[project]
name = "djangocourse"
version = "0.1.0"
description = ""
authors = [
    {name = "super dev",email = "superdev1031@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django"
]

[tool.poetry]
packages = [{include = "djangocourse", from = "."}]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
