[project]
name = "djangocourse"
version = "0.1.0"
description = ""
authors = [
    {name = "super dev",email = "superdev1031@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django",
    "django-allauth[socialaccount] (>=65.4.1,<66.0.0)",
    "psycopg (>=3.2.5,<4.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "djangocourse", from = "."}]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.0.1"
djlint = "^1.36.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
